--- a/app/globals.css
+++ b/app/globals.css
@@ -9,11 +9,31 @@
         @apply h-8 w-auto
     }
 
+    .btn {
+        @apply px-4 py-2 rounded-lg font-medium inline-flex
+    }
+
+    .btn-primary {
+        @apply bg-black text-white
+    }
+
     .tag {
         @apply text-sm inline-flex border border-dark/10 px-3 py-1 rounded-lg tracking-tight
     }
 
     .primary-container {
         @apply max-w-[1440px] mx-auto
+    }
+
+    .section-title {
+        @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text
+    }
+
+    .section-description {
+        @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E]
+    }
+
+    .section-heading {
+        @apply max-w-[540px] mx-auto
     }
 }
